--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "morgan": "~1.5.3",
     "nconf": "^0.7.1",
     "passport": "^0.2.2",
+    "passport-facebook": "^2.0.0",
     "passport-jwt": "^1.1.0",
     "passport-local": "^1.0.0",
     "shortid": "^2.2.2"
