--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^3.3.5",
     "debug": "~2.2.0",
     "express": "~4.12.4",
+    "express-session": "^1.11.3",
     "jsonwebtoken": "^5.0.4",
     "mongoose": "^4.1.0",
     "morgan": "~1.5.3",
@@ -19,6 +20,7 @@
     "passport-facebook": "^2.0.0",
     "passport-jwt": "^1.1.0",
     "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.3",
     "shortid": "^2.2.2"
   }
 }
