Added google oauth

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nconf": "^0.7.1",
     "passport": "^0.2.2",
     "passport-facebook": "^2.0.0",
+    "passport-google-oauth": "^0.2.0",
     "passport-jwt": "^1.1.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.3",
