--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "passport-jwt": "^1.1.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.3",
+    "passport-vkontakte": "^0.4.0",
     "shortid": "^2.2.2"
   }
 }
