--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^4.1.0",
     "morgan": "~1.5.3",
     "nconf": "^0.7.1",
+    "nsqjs": "^0.7.6",
     "passport": "^0.2.2",
     "passport-facebook": "^2.0.0",
     "passport-google-oauth": "^0.2.0",
