--- a/package.json
+++ b/package.json
@@ -1,9 +1,28 @@
 {
   "name": "clickberry-auth-api",
   "version": "0.0.28",
-  "private": true,
+  "main": "app.js",
+  "description": "Auth. micro-service on Node.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha"
+  },
+  "author": "Konstantin Altuhov",
+  "keywords": [
+    "clickberry",
+    "webservices",
+    "node.js",
+    "auth",
+    "api",
+    "jwt"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/clickberry/auth-api-nodejs"
+  },
+  "license": "GPL-3.0",
+  "bugs": {
+    "url": "https://github.com/clickberry/auth-api-nodejs/issues"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
