--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clickberry-auth-api",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "main": "app.js",
   "description": "Auth. micro-service on Node.js",
   "scripts": {
@@ -29,6 +29,7 @@
     "body-parser": "~1.12.4",
     "bootstrap": "^3.3.5",
     "connect-mongo": "^0.8.2",
+    "cors": "^2.7.1",
     "debug": "~2.2.0",
     "events": "^1.0.2",
     "express": "~4.12.4",
