--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clickberry-auth-api",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "main": "app.js",
   "description": "Auth. micro-service on Node.js",
   "scripts": {
@@ -31,6 +31,7 @@
     "connect-mongo": "^0.8.2",
     "cors": "^2.7.1",
     "debug": "~2.2.0",
+    "ejs": "^2.3.4",
     "events": "^1.0.2",
     "express": "~4.12.4",
     "express-session": "^1.11.3",
