--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express": "~4.12.4",
     "express-session": "^1.11.3",
     "jsonwebtoken": "^5.0.4",
+    "moment": "^2.10.6",
     "mongoose": "^4.1.0",
     "morgan": "~1.5.3",
     "nconf": "^0.7.1",
