--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clickberry-auth-api",
-  "version": "0.3.2",
+  "version": "0.4.0",
   "main": "app.js",
   "description": "Auth. micro-service on Node.js",
   "scripts": {
@@ -34,6 +34,7 @@
     "connect-mongo": "^0.8.2",
     "cookie-parser": "^1.4.0",
     "cors": "^2.7.1",
+    "crypto": "0.0.3",
     "debug": "~2.2.0",
     "events": "^1.0.2",
     "express": "~4.12.4",
